k8s-manifests/backend-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatismem-backend-cluster-ip
spec:
  type: ClusterIP
  selector:
    end: whatismem-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
